--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 <body>
   <div id="log-in">
     <h1>INICIAR SESIÓN</h1>
-    <input type="text" clas="input-email" value="" placeholder="Ingrese su correo">
-    <input type="text" clas="input-pass" value="" placeholder="Ingrese su password">
-    <input type="submit" name="" value="Ingresar">
+    <input type="text" id="input-email" placeholder="Ingrese su correo">
+    <input type="password" id="input-pass" placeholder="Ingrese su password">
+    <input type="submit" name="" value="Ingresar" id="sig-in">
   </div>
+
+  <script src="js/user.js"></script>
+  <script type="text/javascript" src="js/log-in.js">
+  <script type="text/javascript" src="js/main.js">
+
+
+  </script>
 </body>
 </html>
