--- a/post.html
+++ b/post.html
@@ -22,11 +22,8 @@
         <div class="box-select">
           <!-- <input type="file" id="files" name="files[]" class="img-move" />
           <output id="list"></output> -->
-          <select class="option-content" id="select" >
-            <option value="public">Public</option>
-            <option value="friends">Friends</option>
-          </select>
-          <input type="button" value="Publicar" onclick="createPost(area.value)">
+           <!-- onclick="createPost(area.value)" -->
+          <input type="button" value="Publicar" id="publicar">
         </div>
       </fieldset>
     </div>
