safe content in LocalStorage

--- a/post.html
+++ b/post.html
@@ -12,14 +12,15 @@
   <div class="box-content">
     <center>
       <h2>POST FOR CODERS</h2>
+
     </center>
     <!--POST FOR CODER -->
-    <section class="box-share">
+    <section class="box-share" id="box-share">
       <span> User:
-        <input type="text" id="user" placeholder="Escribe su nombre">
+        <input type="text" id="user" value="" placeholder="Escribe su nombre">
       </span>
       <fieldset class="content">
-        <textarea id="area"placeholder="¿Qué está pasando?"></textarea>
+        <textarea id="area" value="" placeholder="¿Qué está pasando?"></textarea>
 
           <!-- <input type="file" id="files" name="files[]" class="img-move" />
           <output id="list"></output> -->
