--- a/post.html
+++ b/post.html
@@ -32,8 +32,10 @@
     <section class="box-post" id="post-content">
     </section>
   </div>
+  <footer class="footer">
+    <span >Miriam Mendoza Pilco</span>
+  </footer>
   <script type="text/javascript" src = "js/post.js">
-
   </script>
 </body>
 </html>
