add style media

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <div id="log-in">
     <h1>INICIAR SESIÓN</h1>
-    <input type="text" id="input-email" placeholder="Ingrese su correo">
-    <input type="password" id="input-pass" placeholder="Ingrese su password">
-    <input type="submit" name="" value="Ingresar" id="sig-in">
+    <input type="text" id="input-email" placeholder="Usuario">
+    <input type="password" id="input-pass" placeholder="******">
+    <input type="submit" name="" value="INGRESAR" id="sig-in">
   </div>
 
   <script src="js/user.js"></script>
